--- a/28.Séries Temporais - Prática em Python/3.previsoes_arima.ipynb
+++ b/28.Séries Temporais - Prática em Python/3.previsoes_arima.ipynb
@@ -2007,7 +2007,15 @@
     }
    ],
    "source": [
-    "stepwise_model = auto_arima(data, start_p=1,start_q=1,start_d= 0, start_P=0, max_p=6, max_q=6, m=12, seasonal=True, trace=True, stepwise=False)"
+    "# a maioria dos valores são default, então não precisa informar\n",
+    "# start_p=1,start_q=1,start_d= 0, start_P=0 (pode informar os valores iniciais para que ele não tente muitas combinações\n",
+    "# m=12 (na base temos dados mensais)\n",
+    "# seasonal=True (informar que temos dados sazonais\n",
+    "# trace=True (para gerar uma saída no console)\n",
+    "# stepwise=False (saber se vai utilizar alguma tecnica de otimização, a busca do modelo pode ser mais rápida mas não necessáriamente o melhor modelo)\n",
+    "# AIC é uma metrica para avaliar o quanto o modelo é bom (quanto menor, melhor)\n",
+    "stepwise_model = auto_arima(data, start_p=1,start_q=1,start_d= 0, start_P=0, max_p=6, max_q=6, m=12, seasonal=True, trace=True, stepwise=False)\n",
+    "# Best model:  ARIMA(0,1,1)(1,1,2)[12]"
    ]
   },
   {
